--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
         def lifecycle_version = "2.1.0"
-
+def dagger_version = "2.24"
         // ViewModel and LiveData
         implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
         // alternatively - just ViewModel
@@ -53,5 +53,6 @@ dependencies {
 
         // optional - Test helpers for LiveData
         testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+
 
 }
