--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,60 @@ def dagger_version = "2.24"
 
         // optional - Test helpers for LiveData
         testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    // Fututres
+    implementation "androidx.concurrent:concurrent-futures-ktx:1.1.0-alpha01"
+
+    def nav_version = "2.1.0"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    def paging_version = "2.1.1"
+
+    implementation "androidx.paging:paging-runtime:$paging_version" // For Kotlin use paging-runtime-ktx
+
+    def room_version = "2.2.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    def work_version = "2.2.0"
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    // optional - RxJava2 support
+    implementation "androidx.work:work-rxjava2:$work_version"
+
+    // optional - GCMNetworkManager support
+    implementation "androidx.work:work-gcm:$work_version"
+
+    // optional - Test helpers
+    androidTestImplementation "androidx.work:work-testing:$work_version"
+
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC7"
+def koin_version= "2.0.1"
+// Koin for Kotlin
+    compile "org.koin:koin-core:$koin_version"
+
+// Koin Extended & experimental features
+    implementation "org.koin:koin-core-ext:$koin_version"
+
+// Koin for Unit tests
+    testImplementation "org.koin:koin-test:$koin_version"
+
+
 
 
 }
